// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ic-tree-view component should render 1`] = `
<ic-tree-view aria-label="Heading" context-id="ic-tree-view-0" heading="Heading">
  <template shadowrootmode="open">
    <div class="heading-area-container">
      <ic-typography class="tree-view-header" variant="subtitle-large">
        Heading
      </ic-typography>
    </div>
    <slot></slot>
  </template>
</ic-tree-view>
`;

exports[`ic-tree-view component should render with icon 1`] = `
<ic-tree-view aria-label="Heading" context-id="ic-tree-view-1" heading="Heading">
  <template shadowrootmode="open">
    <div class="heading-area-container">
      <div class="icon-container">
        <slot name="icon"></slot>
      </div>
      <ic-typography class="tree-view-header" variant="subtitle-large">
        Heading
      </ic-typography>
    </div>
    <slot></slot>
  </template>
  <svg fill="#000000" height="24px" slot="icon" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
    <path d="M0 0h24v24H0V0z" fill="none"></path>
    <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"></path>
  </svg>
</ic-tree-view>
`;

exports[`ic-tree-view component should render with slotted heading 1`] = `
<ic-tree-view context-id="ic-tree-view-3">
  <template shadowrootmode="open">
    <div class="heading-area-container">
      <ic-typography class="ic-typography-subtitle-large tree-view-header">
        <template shadowrootmode="open">
          <slot></slot>
        </template>
        <slot name="heading"></slot>
      </ic-typography>
    </div>
    <slot></slot>
  </template>
  <ic-typography class="ic-typography-subtitle-large" slot="heading" variant="subtitle-large">
    <template shadowrootmode="open">
      <slot></slot>
    </template>
    Heading
  </ic-typography>
</ic-tree-view>
`;

exports[`ic-tree-view component should render with tree item data instead of slotted tree items 1`] = `
<ic-tree-view aria-label="Heading" context-id="ic-tree-view-12" heading="Heading">
  <template shadowrootmode="open">
    <div class="heading-area-container">
      <ic-typography class="tree-view-header" variant="subtitle-large">
        Heading
      </ic-typography>
    </div>
    <slot></slot>
  </template>
  <ic-tree-item context-id="ic-tree-view-12" id="ic-tree-item-23">
    <template shadowrootmode="open">
      <div aria-disabled="false" aria-live="polite" class="tree-item-content" tabindex="0">
        <ic-typography class="tree-item-label">
          Item 1
        </ic-typography>
      </div>
    </template>
  </ic-tree-item>
  <ic-tree-item context-id="ic-tree-view-12" id="ic-tree-item-24">
    <template shadowrootmode="open">
      <div aria-disabled="false" aria-live="polite" class="tree-item-content" tabindex="0">
        <ic-typography class="tree-item-label">
          Item 2
        </ic-typography>
      </div>
    </template>
  </ic-tree-item>
  <ic-tree-item class="ic-tree-item-disabled" context-id="ic-tree-view-12" id="ic-tree-item-25">
    <template shadowrootmode="open">
      <div aria-disabled="true" aria-live="polite" class="tree-item-content" tabindex="-1">
        <ic-typography class="tree-item-label">
          Item 3
        </ic-typography>
      </div>
    </template>
  </ic-tree-item>
</ic-tree-view>
`;

exports[`ic-tree-view component should render with tree item data with children and icons 1`] = `
<ic-tree-view aria-label="Heading" context-id="ic-tree-view-13" heading="Heading">
  <template shadowrootmode="open">
    <div class="heading-area-container">
      <ic-typography class="tree-view-header" variant="subtitle-large">
        Heading
      </ic-typography>
    </div>
    <slot></slot>
  </template>
  <ic-tree-item context-id="ic-tree-view-13" id="ic-tree-item-26">
    <template shadowrootmode="open">
      <div aria-disabled="false" aria-live="polite" class="tree-item-content" tabindex="0">
        <span aria-hidden="true" class="arrow-dropdown">
          svg
        </span>
        <ic-typography class="tree-item-label">
          Item 1
        </ic-typography>
      </div>
    </template>
    <ic-tree-item context-id="ic-tree-view-13" id="ic-tree-item-29">
      <template shadowrootmode="open">
        <div aria-disabled="false" aria-live="polite" class="ic-tree-item-single tree-item-content" tabindex="0" style="padding-left: calc(var(--ic-space-xs) + 48px);">
          <ic-typography class="tree-item-label">
            Item 1.1
          </ic-typography>
        </div>
      </template>
    </ic-tree-item>
    <ic-tree-item context-id="ic-tree-view-13" id="ic-tree-item-30">
      <template shadowrootmode="open">
        <div aria-disabled="false" aria-live="polite" class="ic-tree-item-single tree-item-content" tabindex="0" style="padding-left: calc(var(--ic-space-xs) + 48px);">
          <ic-typography class="tree-item-label">
            Item 1.2
          </ic-typography>
        </div>
      </template>
    </ic-tree-item>
  </ic-tree-item>
  <ic-tree-item context-id="ic-tree-view-13" id="ic-tree-item-27">
    <template shadowrootmode="open">
      <div aria-disabled="false" aria-live="polite" class="ic-tree-item-single tree-item-content" tabindex="0">
        <div class="icon-container">
          <slot name="icon"></slot>
        </div>
        <ic-typography class="tree-item-label">
          Item 2
        </ic-typography>
      </div>
    </template>
    <div slot="icon">
      <svg fill="#000000" height="24px" viewBox="0 0 24 24" width="24px" xmlns="http://www.w3.org/2000/svg">
        <path d="M0 0h24v24H0V0z" fill="none"></path>
        <path d="M17.65 6.35C16.2 4.9 14.21 4 12 4c-4.42 0-7.99 3.58-7.99 8s3.57 8 7.99 8c3.73 0 6.84-2.55 7.73-6h-2.08c-.82 2.33-3.04 4-5.65 4-3.31 0-6-2.69-6-6s2.69-6 6-6c1.66 0 3.14.69 4.22 1.78L13 11h7V4l-2.35 2.35z"></path>
      </svg>
    </div>
  </ic-tree-item>
  <ic-tree-item class="ic-tree-item-disabled" context-id="ic-tree-view-13" id="ic-tree-item-28">
    <template shadowrootmode="open">
      <div aria-disabled="true" aria-live="polite" class="ic-tree-item-single tree-item-content" tabindex="-1">
        <ic-typography class="tree-item-label">
          Item 3
        </ic-typography>
      </div>
    </template>
  </ic-tree-item>
</ic-tree-view>
`;

exports[`ic-tree-view component should render with tree items 1`] = `
<ic-tree-view aria-label="Heading" context-id="ic-tree-view-2" heading="Heading">
  <template shadowrootmode="open">
    <div class="heading-area-container">
      <ic-typography class="tree-view-header" variant="subtitle-large">
        Heading
      </ic-typography>
    </div>
    <slot></slot>
  </template>
  <ic-tree-item context-id="ic-tree-view-2" id="ic-tree-item-0" label="Item 1">
    <template shadowrootmode="open">
      <div aria-disabled="false" aria-live="polite" class="tree-item-content" tabindex="0">
        <ic-typography class="tree-item-label">
          Item 1
        </ic-typography>
      </div>
    </template>
  </ic-tree-item>
  <ic-tree-item context-id="ic-tree-view-2" id="ic-tree-item-1" label="Item 2">
    <template shadowrootmode="open">
      <div aria-disabled="false" aria-live="polite" class="tree-item-content" tabindex="0">
        <ic-typography class="tree-item-label">
          Item 2
        </ic-typography>
      </div>
    </template>
  </ic-tree-item>
</ic-tree-view>
`;
